--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "cradlepoint_watcher",
+  "name": "cradlepoint_watcher_server",
   "version": "1.0.0",
   "description": "",
-  "main": "cradlepoint_watcher.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nathanlschneider/Cradlepoint_Watcher.git"
+    "url": "git+https://github.com/nathanlschneider/cradlepoint_watcher_server.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nathanlschneider/Cradlepoint_Watcher/issues"
+    "url": "https://github.com/nathanlschneider/cradlepoint_watcher_server/issues"
   },
-  "homepage": "https://github.com/nathanlschneider/Cradlepoint_Watcher#readme",
+  "homepage": "https://github.com/nathanlschneider/cradlepoint_watcher_server#readme",
   "dependencies": {
     "express": "^4.16.3",
     "express-ws": "^4.0.0",
